correção do link para as plaulists do curso

--- a/NLportuguese.ipynb
+++ b/NLportuguese.ipynb
@@ -16,7 +16,7 @@
       "source": [
         "### Curso de processamento de linguagem natural em portugues\n",
         "\n",
-        "Acesse a [playlist do curso](https://www.ime.usp.br/curso-de-processamento-neural-de-linguagem-natural-em-portugues-e-disponibilizado-gratuitamente-no-canal-do-ime-usp-no-youtube/#:~:text=Acesse%20a%20playlist%20do%20curso%20e%20consulte%20o%20material%20em%3A%20nlportugues.ime.usp.br.) e consulte o material em: [nlportugues.ime.usp.br](https://nlportugues.ime.usp.br/)."
+        "Acesse a [playlist do curso](https://www.youtube.com/playlist?list=PLXLFVfqPqTjc6hGkSqH8hubd6HXJhD1L9) e consulte o material em: [nlportugues.ime.usp.br](https://nlportugues.ime.usp.br/)."
       ]
     }
   ],
