notebook for xml, modified script key.py to set the path to save the .txt file"

--- a/xml/xml_Viveo.ipynb
+++ b/xml/xml_Viveo.ipynb
@@ -11,38 +11,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7d56e9e5-5f01-4ba2-b74b-3b165566713f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arquivo chave.txt gerado em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\chave.txt\n"
+     ]
+    }
+   ],
    "source": [
-    "#SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
+    "# SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
     "\n",
     "import os\n",
     "import re\n",
     "\n",
-    "# pasta contendo os arquivos XML\n",
+    "# Pasta contendo os arquivos XML\n",
     "caminho_pasta = r'C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\xml'\n",
     "\n",
-    "# regex para extrair os números da tag chave\n",
+    "# Caminho para salvar o arquivo chave.txt\n",
+    "caminho_arquivo_chave = r'C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\chave.txt'\n",
+    "\n",
+    "# Regex para extrair os números da tag chave\n",
     "regex = r'<chCTe>(\\d+)</chCTe>'\n",
     "\n",
-    "# abrindo o arquivo de texto para escrita\n",
-    "with open('chave.txt', 'w') as arquivo_chave:\n",
-    "    # ESCREVENDO CHAVE NO CABEÇALHO DO TXT\n",
+    "# Abrindo o arquivo de texto para escrita\n",
+    "with open(caminho_arquivo_chave, 'w') as arquivo_chave:\n",
+    "    # Escrevendo \"CHAVE\" no cabeçalho do arquivo TXT\n",
     "    arquivo_chave.write('CHAVE\\n')\n",
-    "    # iterando sobre cada arquivo na pasta\n",
+    "    \n",
+    "    # Iterando sobre cada arquivo na pasta\n",
     "    for nome_arquivo in os.listdir(caminho_pasta):\n",
     "        if nome_arquivo.endswith('.xml'):\n",
-    "            # abrindo o arquivo XML e lendo o conteúdo\n",
+    "            # Abrindo o arquivo XML e lendo o conteúdo\n",
     "            with open(os.path.join(caminho_pasta, nome_arquivo), 'r') as arquivo_xml:\n",
     "                conteudo = arquivo_xml.read()\n",
-    "                # extraindo os números da tag chave usando regex\n",
+    "                # Extraindo os números da tag chave usando regex\n",
     "                match = re.search(regex, conteudo)\n",
     "                if match:\n",
     "                    numero_chave = match.group(1)\n",
-    "                    # escrevendo o número da chave no arquivo de texto\n",
-    "                    arquivo_chave.write(numero_chave + \",1\" '\\n')\n"
+    "                    # Escrevendo o número da chave no arquivo de texto\n",
+    "                    arquivo_chave.write(numero_chave + \",1\" + '\\n')\n",
+    "\n",
+    "print(f\"Arquivo chave.txt gerado em: {caminho_arquivo_chave}\")\n"
    ]
   },
   {
@@ -55,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "bc18463e-b33d-4fe0-9cf5-ee1ddd85f3c3",
    "metadata": {},
    "outputs": [
@@ -166,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "d4d8d520-fb89-4542-97ea-b33616a77d7d",
    "metadata": {},
    "outputs": [
