new cod for XML FOB

--- a/xml/xml_Viveo.ipynb
+++ b/xml/xml_Viveo.ipynb
@@ -11,18 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7d56e9e5-5f01-4ba2-b74b-3b165566713f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Arquivo chave.txt gerado em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\chave.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
     "\n",
@@ -69,18 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bc18463e-b33d-4fe0-9cf5-ee1ddd85f3c3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Planilha gerada em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\Fatura_CTes_FOB.xlsx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
     "\n",
@@ -180,18 +164,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d4d8d520-fb89-4542-97ea-b33616a77d7d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Planilha gerada em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\Fatura_CTes_CIF.xlsx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
     "\n",
@@ -283,17 +259,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "efaf689d",
+   "metadata": {},
+   "source": [
+    "CODE AJUSTADO FOB HL - INSERIR VIA PROMPR VENCIMENTO E FILIAL"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ef8079c3-8629-4131-99bb-66d88d12d606",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
+    "\n",
+    "import os\n",
+    "import xml.etree.ElementTree as ET\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Pasta contendo os arquivos XML\n",
+    "caminho_pasta = r'C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\xml'\n",
+    "\n",
+    "# Solicitar valores via prompt\n",
+    "vencimento = input(\"Digite a data de vencimento para a coluna 'Venc.': \")\n",
+    "nome_filial_numero = input(\"Digite o número para a 'NOME FILIAL' (ex: 001002): \")\n",
+    "\n",
+    "# Lista para armazenar os dados extraídos\n",
+    "dados = []\n",
+    "\n",
+    "# Função para extrair as informações de cada XML\n",
+    "def extrair_dados_do_xml(caminho_xml):\n",
+    "    tree = ET.parse(caminho_xml)\n",
+    "    root = tree.getroot()\n",
+    "    \n",
+    "    # Definir o namespace\n",
+    "    ns = {'nfe': 'http://www.portalfiscal.inf.br/cte'}\n",
+    "    \n",
+    "    # Função auxiliar para extrair texto de elementos com verificação\n",
+    "    def get_element_text(path):\n",
+    "        element = root.find(path, ns)\n",
+    "        return element.text if element is not None else ''\n",
+    "    \n",
+    "    # Ajuste para remover os dois primeiros dígitos\n",
+    "    def ajustar_codigo_municipio(codigo):\n",
+    "        return codigo[2:] if len(codigo) > 2 else codigo\n",
+    "\n",
+    "    # Extrair as informações desejadas\n",
+    "    cte_info = {\n",
+    "        'CNPJ FILIAL': get_element_text('.//nfe:dest/nfe:CNPJ'),\n",
+    "        'CNPJ TRANSP.': get_element_text('.//nfe:emit/nfe:CNPJ'),\n",
+    "        'TRANSPORTADOR': get_element_text('.//nfe:emit/nfe:xNome'),\n",
+    "        'REMETENTE': get_element_text('.//nfe:rem/nfe:xNome'),\n",
+    "        'CNPJ_REMETENTE': get_element_text('.//nfe:rem/nfe:CNPJ'),\n",
+    "        'CTE': get_element_text('.//nfe:ide/nfe:nCT'),\n",
+    "        'SERIE': get_element_text('.//nfe:ide/nfe:serie'),\n",
+    "        'VALOR': get_element_text('.//nfe:vPrest/nfe:vTPrest').replace('.', ','),\n",
+    "        'CHAVEnf': '\\n'.join([chave.text for chave in root.findall('.//nfe:infDoc/nfe:infNFe/nfe:chave', ns)]),\n",
+    "        'EMISSAO': get_element_text('.//nfe:ide/nfe:dhEmi').split('T')[0] if get_element_text('.//nfe:ide/nfe:dhEmi') else '',  # Formato de data apenas\n",
+    "        'UFIni': get_element_text('.//nfe:ide/nfe:UFIni'),\n",
+    "        'cMunIni': ajustar_codigo_municipio(get_element_text('.//nfe:ide/nfe:cMunIni')),\n",
+    "        'xMunIni': get_element_text('.//nfe:ide/nfe:xMunIni'),\n",
+    "        'UFFim': get_element_text('.//nfe:ide/nfe:UFFim'),\n",
+    "        'cMunFim': ajustar_codigo_municipio(get_element_text('.//nfe:ide/nfe:cMunFim')),\n",
+    "        'xMunFim': get_element_text('.//nfe:ide/nfe:xMunFim'),\n",
+    "        'chCTe': get_element_text('.//nfe:infProt/nfe:chCTe'),\n",
+    "        'vTrib': get_element_text('.//nfe:vPrest/nfe:vTPrest').replace('.', ','),\n",
+    "        'icms%': get_element_text('.//nfe:ICMS/nfe:ICMS00/nfe:pICMS'),\n",
+    "        'vICMS': get_element_text('.//nfe:ICMS/nfe:ICMS00/nfe:vICMS').replace('.', ','),\n",
+    "        'ICMSOutUF%': get_element_text('.//nfe:ICMS/nfe:ICMSOutraUF/nfe:pICMSOutraUF'),\n",
+    "        'vICMSOutUF': get_element_text('.//nfe:ICMS/nfe:ICMSOutraUF/nfe:vICMSOutraUF').replace('.', ',')\n",
+    "    }\n",
+    "\n",
+    "    # Ajuste para a data de emissão no formato desejado (dd/mm/aaaa)\n",
+    "    if cte_info['EMISSAO']:\n",
+    "        data_emissao = cte_info['EMISSAO'].split('-')\n",
+    "        cte_info['EMISSAO'] = f\"{data_emissao[2]}/{data_emissao[1]}/{data_emissao[0]}\"\n",
+    "    \n",
+    "    return cte_info\n",
+    "\n",
+    "# Percorrer todos os arquivos XML na pasta\n",
+    "for arquivo in os.listdir(caminho_pasta):\n",
+    "    if arquivo.endswith('.xml'):\n",
+    "        caminho_xml = os.path.join(caminho_pasta, arquivo)\n",
+    "        cte_info = extrair_dados_do_xml(caminho_xml)\n",
+    "        \n",
+    "        # Adicionar os valores fixos e inseridos via prompt\n",
+    "        cte_info['Venc.'] = vencimento\n",
+    "        cte_info['serviço'] = \"FOB\"\n",
+    "        cte_info['NOME FILIAL'] = f\"CM {nome_filial_numero}\"\n",
+    "        cte_info['COD'] = \"000003\"\n",
+    "        cte_info['Data lanç.'] = \"\"  # Deixa a coluna vazia para preenchimento manual posteriormente\n",
+    "        \n",
+    "        # Adicionar o dicionário de dados à lista\n",
+    "        dados.append(cte_info)\n",
+    "\n",
+    "# Criar um DataFrame com os dados extraídos\n",
+    "df = pd.DataFrame(dados)\n",
+    "\n",
+    "# Ajustar a ordem das colunas de acordo com o modelo Excel\n",
+    "df = df[['Venc.', 'Data lanç.', 'serviço', 'CNPJ FILIAL', 'NOME FILIAL', 'CNPJ TRANSP.', 'COD', 'TRANSPORTADOR', \n",
+    "         'REMETENTE', 'CNPJ_REMETENTE', 'CTE', 'SERIE', 'VALOR', 'CHAVEnf', 'EMISSAO', 'UFIni', 'cMunIni', \n",
+    "         'xMunIni', 'UFFim', 'cMunFim', 'xMunFim', 'chCTe', 'vTrib', 'icms%', 'vICMS', 'ICMSOutUF%', 'vICMSOutUF']]\n",
+    "\n",
+    "# Gerar a planilha Excel\n",
+    "caminho_excel = r'C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\Fatura_CTes_FOB.xlsx'\n",
+    "df.to_excel(caminho_excel, index=False)\n",
+    "\n",
+    "print(f'Planilha gerada em: {caminho_excel}')\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
