new script in xml_Viveo.ipynb

--- a/xml/xml_Viveo.ipynb
+++ b/xml/xml_Viveo.ipynb
@@ -61,10 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bc18463e-b33d-4fe0-9cf5-ee1ddd85f3c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Planilha gerada em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\Fatura_CTes_FOB.xlsx\n"
+     ]
+    }
+   ],
    "source": [
     "#SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
     "\n",
@@ -268,10 +276,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ef8079c3-8629-4131-99bb-66d88d12d606",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Digite a data de vencimento para a coluna 'Venc.':  15/11/24\n",
+      "Digite o número para a 'NOME FILIAL' (ex: 001002):  001036\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Planilha gerada em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\Fatura_CTes_FOB.xlsx\n"
+     ]
+    }
+   ],
    "source": [
     "# SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
     "\n",
@@ -369,11 +393,82 @@
     "\n",
     "print(f'Planilha gerada em: {caminho_excel}')\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c5c7e30-0354-4010-b97d-e06fb5668241",
+   "metadata": {},
+   "source": [
+    "SCRIP PARA JUNTAR AQUIVOS EXCEL COM O MESMO FORMATO DE COLUNAS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2a354c89-2874-4a00-9b6a-4e01616b9f96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\dino.grejo\\AppData\\Local\\Temp\\ipykernel_26232\\619204109.py:20: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  tabela_conc = pd.concat(dfs, ignore_index=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arquivo salvo em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python/tabela_conc.xlsx\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Defina o diretório onde os arquivos estão localizados\n",
+    "diretorio_entradas = r'C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\Tabelas_excel'\n",
+    "\n",
+    "# Defina os nomes dos arquivos .xlsx\n",
+    "# Coloque os nomes dos arquivos aqui\n",
+    "tabelas = ['1.xlsx', '2.xlsx', '3.xlsx', '4.xlsx', '5.xlsx', '6.xlsx', '7.xlsx', '8.xlsx', '9.xlsx']\n",
+    "           \n",
+    "\n",
+    "# Crie uma lista para armazenar as tabelas\n",
+    "dfs = []\n",
+    "\n",
+    "# Leia cada tabela e adicione à lista\n",
+    "for tabela in tabelas:\n",
+    "    df = pd.read_excel(f'{diretorio_entradas}/{tabela}')\n",
+    "    dfs.append(df)\n",
+    "\n",
+    "# Concatene as tabelas\n",
+    "tabela_conc = pd.concat(dfs, ignore_index=True)\n",
+    "\n",
+    "# Defina o diretório de saída\n",
+    "# Coloque o local onde o arquivo será salvo\n",
+    "diretorio_saida =  r'C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python'\n",
+    "\n",
+    "# Salve a tabela juntada em um arquivo Excel\n",
+    "tabela_conc.to_excel(f'{diretorio_saida}/tabela_conc.xlsx', index=False)\n",
+    "\n",
+    "# Confirme que o arquivo foi salvo\n",
+    "print(f'Arquivo salvo em: {diretorio_saida}/tabela_conc.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8360fb8-fb08-4df0-a1e7-45c72e6a0724",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
