add fatura in script CIF

--- a/xml/xml_Viveo.ipynb
+++ b/xml/xml_Viveo.ipynb
@@ -11,10 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7d56e9e5-5f01-4ba2-b74b-3b165566713f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arquivo chave.txt gerado em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\chave.txt\n"
+     ]
+    }
+   ],
    "source": [
     "# SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
     "\n",
@@ -172,10 +180,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d4d8d520-fb89-4542-97ea-b33616a77d7d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Planilha gerada em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\Fatura_CTes_CIF.xlsx\n"
+     ]
+    }
+   ],
    "source": [
     "#SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
     "\n",
@@ -251,12 +267,12 @@
     "df = pd.DataFrame(dados)\n",
     "\n",
     "# Adicionar colunas vazias (em branco) ao DataFrame\n",
-    "colunas_extras = ['Venc.', 'Data lanç.', 'serviço', 'COD']\n",
+    "colunas_extras = ['Venc.', 'Data lanç.', 'FATURA','serviço', 'COD']\n",
     "for coluna in colunas_extras:\n",
     "    df[coluna] = ''  # Preenche a coluna com valores vazios\n",
     "\n",
     "# Ajustar a ordem das colunas de acordo com o modelo Excel\n",
-    "df = df[['Venc.', 'Data lanç.', 'serviço', 'CNPJ REMETENTE', 'REMETENTE', 'CNPJ TRANSP.', 'COD', 'TRANSPORTADOR', 'DESTINATARIO', 'CNPJ DESTINATARIO', 'CTE', 'SERIE', 'VALOR', 'CHAVEnf', 'EMISSAO', 'UFIni', 'cMunIni', 'xMunIni', 'UFFim', \n",
+    "df = df[['Venc.', 'Data lanç.', 'FATURA','serviço', 'CNPJ REMETENTE', 'REMETENTE', 'CNPJ TRANSP.', 'COD', 'TRANSPORTADOR', 'DESTINATARIO', 'CNPJ DESTINATARIO', 'CTE', 'SERIE', 'VALOR', 'CHAVEnf', 'EMISSAO', 'UFIni', 'cMunIni', 'xMunIni', 'UFFim', \n",
     "         'cMunFim', 'xMunFim', 'chCTe', 'vTrib', 'icms%', 'vICMS', 'ICMSOutUF%', 'vICMSOutUF']]\n",
     "\n",
     "# Gerar a planilha Excel\n",
@@ -281,7 +297,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Digite a data de vencimento para a coluna 'Venc.':  15/11/24\n",
@@ -468,7 +484,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
