add script for procv excel

--- a/xml/xml_Viveo.ipynb
+++ b/xml/xml_Viveo.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "7d56e9e5-5f01-4ba2-b74b-3b165566713f",
    "metadata": {},
    "outputs": [
@@ -292,18 +292,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ef8079c3-8629-4131-99bb-66d88d12d606",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Digite a data de vencimento para a coluna 'Venc.':  15/11/24\n",
-      "Digite o número para a 'NOME FILIAL' (ex: 001002):  001036\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -391,6 +383,8 @@
     "        cte_info['NOME FILIAL'] = f\"CM {nome_filial_numero}\"\n",
     "        cte_info['COD'] = \"000003\"\n",
     "        cte_info['Data lanç.'] = \"\"  # Deixa a coluna vazia para preenchimento manual posteriormente\n",
+    "        cte_info['cod_Rem']=\"PROCV([@[CNPJ_REMETENTE]];[cod_fornecedores.xlsx]fornecedores!$B$1:$D$420;2;FALSO)\" #cod procV excel - entrair informaçã da planilha cod_fornecedores\n",
+    "        cte_info['loj_Rem']=\"PROCV([@[CNPJ_REMETENTE]];[cod_fornecedores.xlsx]fornecedores!$B$1:$D$420;3;FALSO)\" #cod procV excel - entrair informaçã da planilha cod_fornecedores\n",
     "        \n",
     "        # Adicionar o dicionário de dados à lista\n",
     "        dados.append(cte_info)\n",
@@ -400,7 +394,7 @@
     "\n",
     "# Ajustar a ordem das colunas de acordo com o modelo Excel\n",
     "df = df[['Venc.', 'Data lanç.', 'serviço', 'CNPJ FILIAL', 'NOME FILIAL', 'CNPJ TRANSP.', 'COD', 'TRANSPORTADOR', \n",
-    "         'REMETENTE', 'CNPJ_REMETENTE', 'CTE', 'SERIE', 'VALOR', 'CHAVEnf', 'EMISSAO', 'UFIni', 'cMunIni', \n",
+    "         'REMETENTE', 'CNPJ_REMETENTE','cod_Rem','loj_Rem','CTE', 'SERIE', 'VALOR', 'CHAVEnf', 'EMISSAO', 'UFIni', 'cMunIni', \n",
     "         'xMunIni', 'UFFim', 'cMunFim', 'xMunFim', 'chCTe', 'vTrib', 'icms%', 'vICMS', 'ICMSOutUF%', 'vICMSOutUF']]\n",
     "\n",
     "# Gerar a planilha Excel\n",
