correção do codigo procv no prompt HL CIF - via terminal

--- a/xml/xml_Viveo.ipynb
+++ b/xml/xml_Viveo.ipynb
@@ -11,18 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7d56e9e5-5f01-4ba2-b74b-3b165566713f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Arquivo chave.txt gerado em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\chave.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
     "\n",
@@ -69,18 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bc18463e-b33d-4fe0-9cf5-ee1ddd85f3c3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Planilha gerada em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\Fatura_CTes_FOB.xlsx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
     "\n",
@@ -180,18 +164,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d4d8d520-fb89-4542-97ea-b33616a77d7d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Planilha gerada em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\Fatura_CTes_CIF.xlsx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
     "\n",
@@ -292,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ef8079c3-8629-4131-99bb-66d88d12d606",
    "metadata": {},
    "outputs": [
@@ -383,8 +359,8 @@
     "        cte_info['NOME FILIAL'] = f\"CM {nome_filial_numero}\"\n",
     "        cte_info['COD'] = \"000003\"\n",
     "        cte_info['Data lanç.'] = \"\"  # Deixa a coluna vazia para preenchimento manual posteriormente\n",
-    "        cte_info['cod_Rem']=\"PROCV([@[CNPJ_REMETENTE]];[cod_fornecedores.xlsx]fornecedores!$B$1:$D$420;2;FALSO)\" #cod procV excel - entrair informaçã da planilha cod_fornecedores\n",
-    "        cte_info['loj_Rem']=\"PROCV([@[CNPJ_REMETENTE]];[cod_fornecedores.xlsx]fornecedores!$B$1:$D$420;3;FALSO)\" #cod procV excel - entrair informaçã da planilha cod_fornecedores\n",
+    "        cte_info['cod_Rem']= r\"PROCV([@[CNPJ_REMETENTE]];'C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\#CM Hospitalar - 2ª Quinzena de Novembro 2024 - HL\\[cod_fornecedores.xlsx]fornecedores'!$B$1:$D$420;2;FALSO\" #cod procV excel - extrair informação da planilha cod_fornecedores\n",
+    "        cte_info['loj_Rem']= r\"PROCV([@[CNPJ_REMETENTE]];'C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\#CM Hospitalar - 2ª Quinzena de Novembro 2024 - HL\\[cod_fornecedores.xlsx]fornecedores'!$B$1:$D$420;3;FALSO\" #cod procV excel - extrair informação da planilha cod_fornecedores\n",
     "        \n",
     "        # Adicionar o dicionário de dados à lista\n",
     "        dados.append(cte_info)\n",
@@ -414,26 +390,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2a354c89-2874-4a00-9b6a-4e01616b9f96",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\dino.grejo\\AppData\\Local\\Temp\\ipykernel_26232\\619204109.py:20: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  tabela_conc = pd.concat(dfs, ignore_index=True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Arquivo salvo em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python/tabela_conc.xlsx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -466,14 +426,6 @@
     "# Confirme que o arquivo foi salvo\n",
     "print(f'Arquivo salvo em: {diretorio_saida}/tabela_conc.xlsx')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8360fb8-fb08-4df0-a1e7-45c72e6a0724",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
