--- a/xml/xml_Viveo.ipynb
+++ b/xml/xml_Viveo.ipynb
@@ -268,18 +268,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ef8079c3-8629-4131-99bb-66d88d12d606",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Planilha gerada em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\Fatura_CTes_FOB.xlsx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
     "\n",
@@ -359,8 +351,8 @@
     "        cte_info['NOME FILIAL'] = f\"CM {nome_filial_numero}\"\n",
     "        cte_info['COD'] = \"000003\"\n",
     "        cte_info['Data lanç.'] = \"\"  # Deixa a coluna vazia para preenchimento manual posteriormente\n",
-    "        cte_info['cod_Rem']= r\"PROCV([@[CNPJ_REMETENTE]];'C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\#CM Hospitalar - 2ª Quinzena de Novembro 2024 - HL\\[cod_fornecedores.xlsx]fornecedores'!$B$1:$D$420;2;FALSO\" #cod procV excel - extrair informação da planilha cod_fornecedores\n",
-    "        cte_info['loj_Rem']= r\"PROCV([@[CNPJ_REMETENTE]];'C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\#CM Hospitalar - 2ª Quinzena de Novembro 2024 - HL\\[cod_fornecedores.xlsx]fornecedores'!$B$1:$D$420;3;FALSO\" #cod procV excel - extrair informação da planilha cod_fornecedores\n",
+    "        cte_info['cod_Rem']= r\"PROCV([@[CNPJ_REMETENTE]];'C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\!FOB CM HL\\[cod_fornecedores.xlsx]fornecedores'!$B$1:$D$420;2;FALSO\" #cod procV excel - extrair informação da planilha cod_fornecedores\n",
+    "        cte_info['loj_Rem']= r\"PROCV([@[CNPJ_REMETENTE]];'C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\!FOB CM HL\\[cod_fornecedores.xlsx]fornecedores'!$B$1:$D$420;3;FALSO\" #cod procV excel - extrair informação da planilha cod_fornecedores\n",
     "        \n",
     "        # Adicionar o dicionário de dados à lista\n",
     "        dados.append(cte_info)\n",
