new .ipynb and .db

--- a/xml/Pandas and SQL.ipynb
+++ b/xml/Pandas and SQL.ipynb
@@ -9,7 +9,27 @@
    "source": [
     "### **Carregar os dados do Excel**\n",
     "\n",
-    "Use o Pandas para ler o arquivo Excel:"
+    "Use o Pandas para ler o arquivo Excel:\n",
+    "```python\n",
+    "import pandas as pd\n",
+    "import sqlite3\n",
+    "\n",
+    "# Passo 1: Carregar os dados do Excel\n",
+    "caminho_excel = r\"C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\cod_fornecedores.xlsx\"  # Substitua pelo caminho do seu arquivo\n",
+    "\n",
+    "# Ler o arquivo Excel, forçando as colunas CNPJ_REMETENTE, cod e loja como texto\n",
+    "df = pd.read_excel(caminho_excel, dtype={\n",
+    "    'CNPJ_REMETENTE': str,  # Forçar como texto\n",
+    "    'cod': str,             # Forçar como texto\n",
+    "    'loja': str             # Forçar como texto\n",
+    "})\n",
+    "\n",
+    "# Substituir 'nan' por strings vazias ('') nas colunas cod e loja\n",
+    "df['cod'] = df['cod'].replace('nan', '')\n",
+    "df['loja'] = df['loja'].replace('nan', '')\n",
+    "\n",
+    "# Exibir as primeiras linhas para verificar os dados\n",
+    "print(df.head())"
    ]
   },
   {
@@ -246,9 +266,7 @@
   {
    "cell_type": "markdown",
    "id": "f60be84b-5d6b-4d59-b9a2-c4f32afae988",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### **Fechar a conexão com o banco de dados**\n",
     "\n",
@@ -260,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5aa1fe36-9b39-4f12-b48c-52a5b1e7738f",
    "metadata": {},
    "outputs": [],
@@ -271,9 +289,7 @@
   {
    "cell_type": "markdown",
    "id": "324a862e-6297-48cb-b358-f105e3cb07c7",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### **Conectar ao banco de dados**\n",
     "\n",
@@ -310,9 +326,7 @@
   {
    "cell_type": "markdown",
    "id": "2f5e2507-2890-40fa-a361-75a125cced4b",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### **Consultar usando SQL**\n",
     "\n",
