--- a/xml/xml_Viveo.ipynb
+++ b/xml/xml_Viveo.ipynb
@@ -4,9 +4,13 @@
    "attachments": {},
    "cell_type": "markdown",
    "id": "c0525f89-591b-4abb-9068-be7b81d9f864",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "Script para criação do arquivo chave.txt - usado para lançamento de cte >Especificos Mafra>Rotinas>Fretes"
+    "### **Script para criação do arquivo chave.txt**  \n",
+    "\n",
+    "usado para lançamento de cte >Especificos Mafra>Rotinas>Fretes"
    ]
   },
   {
@@ -261,7 +265,9 @@
   {
    "cell_type": "markdown",
    "id": "efaf689d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### **CODE AJUSTADO FOB HL**\n",
     "#### **INSERIR VIA PROMPR VENCIMENTO E FILIAL**"
@@ -384,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "a51fab79-27ea-4296-9b34-e87885bb0179",
    "metadata": {},
    "outputs": [
